<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/TxtB3"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/TxtB3"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TxtB4"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/TxtB4"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtB3" />

    <Button
        android:id="@+id/Btn6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:onClick="Sumar"
        android:text="@string/Btn6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtB4" />

    <Button
        android:id="@+id/Btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="17dp"
        android:text="@string/Btn7"
        android:onClick="Restar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Btn6"
        app:layout_constraintTop_toBottomOf="@+id/TxtB4" />

    <Button
        android:id="@+id/Btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:onClick="Multiplicar"
        android:text="@string/Btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn6" />

    <Button
        android:id="@+id/Btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:onClick="Dividir"
        android:text="@string/Btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/Btn8"
        app:layout_constraintTop_toBottomOf="@+id/Btn7" />

    <TextView
        android:id="@+id/TxtV1"
        android:layout_width="154dp"
        android:layout_height="42dp"
        android:layout_marginEnd="139dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="11dp"
        android:text="@string/TxtV1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn12" />

    <TextView
        android:id="@+id/TxtV2"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginEnd="205dp"
        android:layout_marginStart="67dp"
        android:text="@string/TxtV2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtV1" />

    <Button
        android:id="@+id/Btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="67dp"
        android:onClick="Exponenciacion"
        android:text="Exponencial"
        app:layout_constraintEnd_toStartOf="@+id/Btn11"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn8" />

    <Button
        android:id="@+id/Btn11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:onClick="Modulo"
        android:text="Modulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn9" />

    <Button
        android:id="@+id/Btn12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="185dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="8dp"
        android:onClick="RaizCuadrada"
        android:text="Raiz cuadrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn10" />
</android.support.constraint.ConstraintLayout>