<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ipn.cecyt9.edu.examen_primerparcial_luislopez.Intenciones">

    <Button
        android:id="@+id/Llamada"
        android:layout_width="119dp"
        android:layout_height="52dp"
        android:layout_marginEnd="132dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="20dp"
        android:text="@string/Boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PaginaWEB" />

    <Button
        android:id="@+id/GoogleMaps"
        android:layout_width="121dp"
        android:layout_height="52dp"
        android:layout_marginEnd="131dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="12dp"
        android:text="@string/Boton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Llamada" />

    <Button
        android:id="@+id/Fotos"
        android:layout_width="101dp"
        android:layout_height="52dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="8dp"
        android:text="@string/Boton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoogleMaps" />

    <Button
        android:id="@+id/Correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="122dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="12dp"
        android:text="@string/Boton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fotos" />

    <Button
        android:id="@+id/PaginaWEB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="118dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="16dp"
        android:text="@string/Boton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="105dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="20dp"
        android:onClick="AbrirStreetView"
        android:text="StreetView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Correo" />
</android.support.constraint.ConstraintLayout>